changes the management properties

--- a/orderapp/src/main/resources/application.properties
+++ b/orderapp/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-management.endpoints.web.exposure.include=*
-management.endpoints.web.exposure.exclude=env
+management.endpoints.web.base-path=/orderapp
+management.endpoint.refresh.enabled=true
+management.endpoints.web.exposure.include=health,info,refresh
