--- a/shipment/src/main/resources/application.properties
+++ b/shipment/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8181
-management.endpoints.web.exposure.include=*
-management.endpoints.web.exposure.exclude=env
+management.endpoints.web.base-path=/shipment
+management.endpoint.refresh.enabled=true
+management.endpoints.web.exposure.include=health,info,refresh
